# ocr_python

./: README.md  pyproject.toml
src/: main.py
src/ocr_python/: __init__.py
