[project]
name = "ocr-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shunyakatada", email = "85655151+shunyasaitama@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "pytesseract>=0.3.10",
    "pillow>=10.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ocr_python"]
